samples/_failures_safe/1761666278_1cc1d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_39a16c68.c: In function ‘main’:
./samples/SAFE/__tmp_39a16c68.c:151:43: error: missing terminating " character
  151 |                     print_matrix(&result, "
      |                                           ^
./samples/SAFE/__tmp_39a16c68.c:151:21: error: expected expression at end of input
  151 |                     print_matrix(&result, "
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_39a16c68.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_39a16c68.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_39a16c68.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_39a16c68.c:151:21: error: expected declaration or statement at end of input
